tickets page ui added

--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -1,5 +1,4 @@
-{% load static %}
-{% load get_account_pay %}
+{% load static %} {% load get_account_pay %}
 <div id="block_34" class="component_private_navbar">
     <span class="component_private_navbar">
         <div class="component-navbar-private__wrapper">
@@ -175,7 +174,7 @@
                                             Child panel
                                         </a>
                                     </li> -->
-                                    <!-- <li
+                                    <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
                                         <a
@@ -191,7 +190,7 @@
                                             </span>
                                             Tickets
                                         </a>
-                                    </li> -->
+                                    </li>
                                     <!-- <li
                                         class="nav-item component-navbar-nav-item component-navbar-private-nav-item"
                                     >
@@ -216,8 +215,8 @@
                                     >
                                         <a
                                             class="component-navbar-balance-item__navbar-private"
-                                            >₹{% get_account_balance user %} </a
-                                        >
+                                            >₹{% get_account_balance user %}
+                                        </a>
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav">
@@ -374,7 +373,7 @@
                                 >
                             </a>
                         </li> -->
-                        <!-- <li class="component-sidebar__menu-item">
+                        <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
                                 href="{% url 'tickets' %}"
@@ -386,7 +385,7 @@
                                     >Tickets</span
                                 >
                             </a>
-                        </li> -->
+                        </li>
                         <!-- <li class="component-sidebar__menu-item">
                             <a
                                 class="component-sidebar__menu-item-link"
