dashboard placeholder updated

--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -117,6 +117,7 @@
                                                         <input
                                                             class="form-control"
                                                             name="link"
+                                                            placeholder="Enter account link"
                                                             value=""
                                                             required
                                                             type="url"
@@ -138,6 +139,8 @@
                                                             name="quantity"
                                                             oninput="detectPriceChange(this)"
                                                             type="number"
+                                                            placeholder="Enter quantity "
+
                                                             required
                                                             id="field-orderform-fields-quantity"
                                                         /><small
@@ -184,6 +187,7 @@
                                                         class="form-control"
                                                         id="charge"
                                                         value=""
+                                                        placeholder="Price will be shown her for your service"
                                                         readonly=""
                                                     />
                                                 </div>
