dashboard link updated

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -55,6 +55,21 @@
                                             >
                                         </li>
                                         {% endif %}
+
+                                        {% if  request.user.is_authenticated %}
+                                        <li
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
+                                        >
+                                            <a
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public component-navbar-nav-link-active__navbar-public"
+                                                href="{% url 'dashboard' %}"
+                                                ><i
+                                                    class="navbar-icon fad fa-home"
+                                                ></i>
+                                                Dashboard</a
+                                            >
+                                        </li>
+                                        {% endif %}
                                         <li
                                             class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
