--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -265,7 +265,7 @@
                                                             "
                                                         >
                                                             <img
-                                                                src="/static/images/qr_page-0001.jpeg"
+                                                                src="/static/images/paytmqr.jpeg"
                                                                 style="
                                                                     display: inline-block;
                                                                     width: 546px;
