--- a/services/templates/services.html
+++ b/services/templates/services.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block title %}Register {% endblock title %}
+{% extends 'base.html' %}
+{% block title %}Services -Promotionmaro.com {% endblock title %}
+
+{% block title %}Register {% endblock title %}
 <p></p>
 {% block content %}
 <div class="wrapper wrapper-navbar">
