--- a/services/templates/tickets.html
+++ b/services/templates/tickets.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %}Tickets -Promotionmaro.com {% endblock title %}
+{% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
 
