--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,10 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>{% block title %} {% endblock title %}</title>
+        <title>{% block title %} Promotionmaro.com{% endblock title %}</title>
         <meta
             name="keywords"
-            content="smm panel,best smm panel,cheapest smm panel,main smm panel,main smm provider,sasta,provider,smm,sast provider,api,social media"
+            content="promotion,promotionmaro,smm panel,best smm panel,cheapest smm panel,main smm panel,main smm provider,sasta,provider,smm,sast provider,api,social media"
         />
         <meta name="description" content="" />
 
