--- a/dashboard/templates/about.html
+++ b/dashboard/templates/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Register {% endblock title %}
+{% extends 'base.html' %} {% block title %}About us {% endblock title %}
 <p></p>
 {% block content %}
 <div class="wrapper wrapper-navbar">
