--- a/orders/templates/add_funds.html
+++ b/orders/templates/add_funds.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block title %}Add funds -Promotionmaro.com {% endblock title %}
+ {% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
 
