--- a/orders/templates/orders.html
+++ b/orders/templates/orders.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %}Orders -Promotionmaro.com {% endblock title %}
+
+{% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
 
