--- a/services/templates/view_tickets.html
+++ b/services/templates/view_tickets.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %}{{ticket.user.name}} -Promotionmaro.com {% endblock title %}
+
+{% block content %}
 <div class="wrapper wrapper-sidebar-navbar">
     {% include 'components/dashboard_leftsidebar.html' %}
 
