live service count shown

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -86,7 +86,7 @@
                                                             class="sign-in__forgot"
                                                         >
                                                             <a
-                                                                href="/resetpassword"
+                                                                href="{% url 'login' %}"
                                                                 >Forgot
                                                                 password?</a
                                                             >
