--- a/dashboard/templates/components/try_panel.html
+++ b/dashboard/templates/components/try_panel.html
@@ -76,7 +76,7 @@
                                             line-height: 36px;
                                         "
                                     >
-                                        196055
+                                    {% get_orders_count %}
                                     </div>
                                 </div>
                                 <div class="totals-block__card-name">
