--- a/dashboard/templates/components/place_order.html
+++ b/dashboard/templates/components/place_order.html
@@ -446,7 +446,9 @@
                                         style-card-number-line
                                     "
                                 ></div>
+                                <iframe width="100%" style="min-height: 250px;" src="https://www.youtube.com/embed/iirmROWGNrY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
