--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -183,6 +183,20 @@
                                         </form>
                                     </div>
                                 </div>
+                                <div class="mt-5">
+                                    <h1 class="text-white text-center mb-2">
+                                        How to use promotionmaro.com website
+                                    </h1>
+                                    <iframe
+                                        width="100%"
+                                        style="min-height: 350px"
+                                        src="https://www.youtube.com/embed/iirmROWGNrY"
+                                        title="YouTube video player"
+                                        frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen
+                                    ></iframe>
+                                </div>
                             </div>
                         </div>
                     </div>
