--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>{% block title %} Promotionmaro.com{% endblock title %}</title>
+        <title>{% block title %} Promotionmaro.com | Smm Panel{% endblock title %}</title>
         <meta
             name="google-site-verification"
             content="dvGt_iD0ehFpbGGfGQaPuGFYSkY-LweOw-55I36yi-Y"
