--- a/dashboard/templates/components/dashboard_leftsidebar.html
+++ b/dashboard/templates/components/dashboard_leftsidebar.html
@@ -8,14 +8,10 @@
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-light">
                         <div class="sidebar-block__top-brand">
-                            <div class="component-navbar-logo">
-                                <a href="{% url 'dashboard' %}">
-                                    <img
-                                        src="{% static 'images/logobest.jpeg' %}"
-                                        class="sidebar-block__top-logo"
-                                        alt=""
-                                        title=""
-                                    />
+                            <div class="component-navbar-logo items-center justify-content-center">
+                                <a class="flex items-center justify-content-center" href="{% url 'dashboard' %}">
+                                   
+                                    <h3 class="text-white text-decoration-none underline-none text-uppercase" >  Promotionmaro</h3>
                                 </a>
                             </div>
                         </div>
